@@ -31,13 +31,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
  * for all tests inside that class. Any method level configurations will
  * override the class level configurations.
  *
- * <p>Warning: If your {@link SecurityManager} does not allow modifications, it fails.
+ * <p>WARNING: Java considers environment variables to be immutable, so this extension
+ * uses reflection to change them. This requires that the {@link SecurityManager}
+ * allows modifications and can potentially break on different operating systems and
+ * Java versions. Be aware that this is a fragile solution and consider finding a
+ * better one for your specific situation. If you're running on Java 9 or later, you
+ * may have to add {@code --add-opens=java.base/java.util=ALL-UNNAMED} to your test
+ * execution to prevent warnings or even errors.
  *
  * @since 0.6
  */
 @Retention(RetentionPolicy.RUNTIME)
 @Target({ ElementType.METHOD, ElementType.TYPE })
-@Repeatable(SetEnvironmentVariables.class)
+@Repeatable(SetEnvironmentVariable.SetEnvironmentVariables.class)
 @ExtendWith(EnvironmentVariableExtension.class)
 public @interface SetEnvironmentVariable {
 
@@ -50,5 +56,17 @@ public @interface SetEnvironmentVariable {
 	 * The value of the system property to be set.
 	 */
 	String value();
+
+	/**
+	 * Containing annotation of repeatable {@code @SetEnvironmentVariable}.
+	 */
+	@Retention(RetentionPolicy.RUNTIME)
+	@Target({ ElementType.METHOD, ElementType.TYPE })
+	@ExtendWith(EnvironmentVariableExtension.class)
+	@interface SetEnvironmentVariables {
+
+		SetEnvironmentVariable[] value();
+
+	}
 
 }
